# ng-daisyui

./: .gitignore  .npmrc  CLAUDE.md  CONSUMER-USAGE.md  I18N_AUDIT.md  MATERIAL_FEASIBILITY.md  MIGRATION.md  README.md  TABLE_ROADMAP.md  angular.json  chunk-3V6JV5I3.js  chunk-5MSO5BKS.js  chunk-5S5DTQH3.js  chunk-7NFJGNQ6.js  chunk-BR7ZAD5Q.js  chunk-CWNYDADC.js  chunk-DN77DQ5H.js  chunk-EFFRAOY3.js  chunk-EUFXBNHI.js  chunk-F6WBHCZE.js  chunk-GDOOAQEI.js  chunk-HDOEGWLG.js  chunk-HVWTLUJL.js  chunk-IE7MTAGE.js  chunk-LF3XQDBE.js  chunk-MMYG2SJN.js  chunk-O4PQ5IQ2.js  chunk-PRVW3LPO.js  chunk-SSAJA2G4.js  chunk-TIHC4WSQ.js  chunk-UJHA4AWA.js  chunk-WAF4C5KK.js  chunk-XEMU7XGV.js  chunk-Y25SGYDC.js  document-editor.roadmap.md  eslint.config.mjs  index.html  landing.html  main-QMQRYYPP.js  package-lock.json  (+9 more)
.claude/skills/hakistack-ng-daisyui/: SKILL.md
.claude/skills/hakistack-ng-daisyui/references/: content-viewers.md  forms.md  inputs-pickers.md  overlays-feedback.md  structure-misc.md  table.md
.github/workflows/: ci.yml
docs/: i18n-library-extraction-analysis.md
docs/plans/: charts.md  command-palette.md  controller-extraction-playbook.md  declarative-builders-and-schema-extensibility.md  editor.md  hierarchy.md  icon-component.md  notification.md  pdf-viewer.md  storybook.md
e2e/: app.spec.ts
hakistack-engine/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
hakistack-engine/crates/document-engine/: Cargo.toml
hakistack-engine/crates/document-engine/src/: lib.rs  spreadsheet.rs
hakistack-engine/crates/document-wasm/: Cargo.toml
hakistack-engine/crates/document-wasm/src/: lib.rs
hakistack-engine/crates/engine-core/: Cargo.toml
hakistack-engine/crates/engine-core/src/: arena.rs  bitset.rs  fold.rs  lib.rs
hakistack-engine/crates/engine-wasm/: Cargo.toml
hakistack-engine/crates/engine-wasm/src/: convert.rs  lib.rs  wire.rs
hakistack-engine/crates/form-engine/: Cargo.toml  README.md
hakistack-engine/crates/form-engine/src/: condition.rs  engine.rs  event.rs  lib.rs  schema.rs  state.rs  value.rs
hakistack-engine/crates/image-engine/: Cargo.toml
hakistack-engine/crates/image-engine/src/: lib.rs
hakistack-engine/crates/image-wasm/: Cargo.toml
hakistack-engine/crates/image-wasm/src/: lib.rs
hakistack-engine/crates/libheif-bridge/: Cargo.toml  build.rs
hakistack-engine/crates/libheif-bridge/src/: main.rs
hakistack-engine/crates/pdf-engine/: Cargo.toml
hakistack-engine/crates/pdf-engine/src/: lib.rs
hakistack-engine/crates/search-engine/: Cargo.toml
hakistack-engine/crates/search-engine/src/: fuzzy.rs  lib.rs  pdf.rs
hakistack-engine/crates/table-engine/: Cargo.toml
hakistack-engine/crates/table-engine/src/: aggregate.rs  dataset.rs  filter.rs  group.rs  lib.rs  search.rs  sort.rs
hakistack-engine/crates/tree-engine/: Cargo.toml
hakistack-engine/crates/tree-engine/src/: cascade.rs  dataset.rs  filter.rs  flatten.rs  lib.rs
projects/demo-v3/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
projects/demo-v3/src/: index.html  styles.css
projects/demo-v3/src/app/: app.config.ts  app.routes.ts  app.ts
projects/demo-v4/: angular.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json
projects/demo-v4/public/: document_wasm_bg.wasm  image_wasm_bg.wasm  pdf_engine.js
projects/demo-v4/scripts/: build-lib-css.mjs  lib-css.config.mjs
projects/demo-v4/src/: index.html  styles.css
projects/demo-v4/src/app/: app.config.ts  app.routes.ts  app.ts
projects/demo/public/: document_wasm.js  image_wasm.js  image_wasm_bg.wasm  libheif_wasm.js  libheif_wasm.wasm  pdf-render.worker.mjs  pdf_engine.js  pdf_engine_bg.wasm
projects/demo/public/alerts/: release-notes.html  terms.html
projects/demo/public/snippets/: meeting-notes.html
projects/demo/src/: index.html  styles.css
projects/demo/src/app/: app.config.ts  app.ts  (+1 more)
projects/hakistack/i18n/: README.md  ng-package.json  package.json  tsconfig.lib.json  tsconfig.spec.json
projects/hakistack/ng-daisyui/: CHANGELOG.md  README.md  ng-package.json  package.json  plugin.cjs  plugin.mjs  styles.css  tsconfig.lib.json
projects/hakistack/ng-daisyui-v3/: ng-package.json  package.json  plugin.cjs  plugin.mjs  safelist.cjs  safelist.mjs  tailwind.preset.js
projects/hakistack/ng-daisyui-v4/: README.md  ng-package.json  package.json  plugin.cjs  styles.css  tailwind.preset.js
projects/hakistack/ui-components/: README.md  ng-package.json  package.json
projects/shared-demos/: api-docs.generated.ts  config.ts
projects/shared-demos/demos/: alert-demo.component.ts  app-shell-demo.component.ts  breadcrumbs-demo.component.ts  chart-spike.component.ts  command-palette-demo.component.ts  dashboard-demo.component.ts  datepicker-demo.component.ts  dialog-demo.component.ts  document-viewer-demo.component.ts  editor-demo.component.ts  engine-stress-demo.component.ts  forms-demo.component.ts  getting-started-v4.component.ts  getting-started.component.ts  icons-demo.component.ts  input-demo.component.ts  installation-v4.component.ts  installation.component.ts  key-patterns-v4.component.ts  key-patterns.component.ts  menu-demo.component.ts  motion-demo.component.ts  notification-demo.component.ts  org-chart-demo.component.ts  pdf-viewer-demo.component.ts  select-demo.component.ts  table-demo.component.ts  tabs-demo.component.ts  timepicker-demo.component.ts  toast-demo.component.ts  tree-demo.component.ts  tree-table-demo.component.ts  virtual-scroller-demo.component.ts  wizard-demo.component.ts
projects/shared-demos/shared/: api-docs-for.component.ts  api-table.component.ts  code-block.component.ts  demo-page.component.ts  doc-section.component.ts  syntax-highlighter.ts
scripts/: assemble-vercel.mjs  build-i18n-cli.mjs  build-i18n-schematics.mjs  build-lib-css.mjs  build-pdfium-worker.mjs  build-render-worker.mjs  build-schematics.mjs  build-wasm.mjs  copy-pdf-worker.mjs  extract-api-docs.mjs  extract-fesm-classes.mjs  fetch-pdfium.mjs  fix-exports.mjs  inline-pdf-worker.mjs  lib-css.config.mjs  release.mjs
(+492 files in other folders)
