[package]
name        = "document-wasm"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "wasm-bindgen umbrella for document-engine. Built as a separate WASM bundle from engine-wasm so apps using only hk-table don't pay the document-parsing cost."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
document-engine = { workspace = true }

wasm-bindgen        = { workspace = true }
js-sys              = { workspace = true }
serde               = { workspace = true }
serde-wasm-bindgen  = { workspace = true }

console_error_panic_hook = { version = "0.1", optional = true }

[features]
default      = ["debug-panics"]
debug-panics = ["dep:console_error_panic_hook"]

# Same wasm-opt config as engine-wasm — `-O3` empirically produces smaller
# bundles than `-Oz` because aggressive inlining enables better dead-code
# elimination than the size pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
