[package]
name        = "engine-wasm"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "Single wasm-bindgen umbrella for hakistack-engine. Built into @hakistack/engine via wasm-pack."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core   = { workspace = true }
table-engine  = { workspace = true }
tree-engine   = { workspace = true }
search-engine = { workspace = true }

wasm-bindgen        = { workspace = true }
js-sys              = { workspace = true }
serde               = { workspace = true }
serde-wasm-bindgen  = { workspace = true }

console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default      = ["debug-panics"]
debug-panics = ["dep:console_error_panic_hook"]

# wasm-opt 0.x is conservative about WASM proposals; modern rustc emits
# bulk-memory and non-trapping float-to-int by default. Pass the flags
# explicitly so optimization succeeds.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
