[package]
name        = "engine-wasm"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "Single wasm-bindgen umbrella for hakistack-engine. Built into @hakistack/engine via wasm-pack."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core   = { workspace = true }
table-engine  = { workspace = true }
tree-engine   = { workspace = true }
search-engine = { workspace = true }

wasm-bindgen        = { workspace = true }
js-sys              = { workspace = true }
serde               = { workspace = true }
serde-wasm-bindgen  = { workspace = true }

console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
# `console_error_panic_hook` adds ~5 KB to the bundle and is only useful in
# development. The build script enables `debug-panics` for `--dev` and skips
# it for `--release`, so prod consumers don't pay for it.
default      = ["debug-panics"]
debug-panics = ["dep:console_error_panic_hook"]

# wasm-opt configuration. `-O3` (speed) actually produces *smaller* output
# than `-Oz` (size) for this codebase — likely because aggressive inlining
# enables better dead-code elimination than the more conservative size
# pass. Measured 295 KB (-O3) vs 432 KB (-Oz). Counter-intuitive but real.
#
# `--enable-bulk-memory` and `--enable-nontrapping-float-to-int` keep
# wasm-opt 0.x compatible with modern rustc output (these proposals are
# emitted by default in recent compilers).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
