[package]
name        = "form-engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "DEFERRED — placeholder slot for hk-dynamic-form's condition / validation engine. See README."

# Intentionally minimal. See crates/form-engine/README.md.
[dependencies]
