[package]
name        = "form-engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "Schema-driven condition / dependency-graph kernel for hk-dynamic-form. See README.md."

[dependencies]
engine-core = { workspace = true }
rustc-hash  = { workspace = true }
