[package]
name        = "search-engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "Fuzzy + PDF substring search kernels for hk-command-palette, hk-select, and hk-pdf-viewer."

[dependencies]
engine-core    = { workspace = true }
memchr         = { workspace = true }
nucleo-matcher = { workspace = true }
