[package]
name        = "table-engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "Filter / sort / search / group / aggregate / tree-flatten kernels for hk-table."

[dependencies]
engine-core = { workspace = true }
rustc-hash  = { workspace = true }
memchr      = { workspace = true }
