[package]
name        = "tree-engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish.workspace    = true
description = "Filter / flatten / selection cascade / descendant test for hk-tree."

[dependencies]
engine-core = { workspace = true }
memchr      = { workspace = true }
